Fixed hierarchy edit box: the active class was not visible for the selected hierarchy value because it's parent hover class was being applied. Also some widths were fixed in 960 px in order to solve some layout issues.

--- a/app/assets/stylesheets/tables.css.scss
+++ b/app/assets/stylesheets/tables.css.scss
@@ -53,7 +53,7 @@
     }
     @include clearfix(); 
   }
-    tr td div:hover {
+    tr td div.site_row:hover {
       background: #eeeeee;
       cursor: pointer;
     }
